--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -577,8 +577,12 @@ footer {
     width: 28px;
     height: 28px;
     border-radius: 3px;
+    background: #f9f9f9;
 }
 
+.footer .socail-link + .socail-link {
+    margin-left: 6px;
+}
 .footer .socail-link:hover {
     background: #ebebeb;
 }
