--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,6 +61,7 @@ a {
     position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     background: #e6f0ff;
     height: calc(100vh - 90px);
 }
@@ -104,7 +105,7 @@ a {
 }
 
 .hero {
-    margin-top: 130px;
+    /* margin-top: 130px; */
 }
 .hero .info {
     width: 51%;
